force-app/main/default/objects/Tache__c/Tache__c.object-meta.xml
<CustomObject>
    <description>Pour voir toutes les tâches des employés</description>
    <label>Tâche</label>
    <nameField>
        <label>📋 Nom de la tâche</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tâches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>