force-app/main/default/objects/Tache__c/fields/Alerte_Visuelle__c.field-meta.xml
<CustomField>
    <fullName>Alerte_Visuelle__c</fullName>
    <formula>IF(
    ISPICKVAL(Statut__c , &quot;Terminé&quot;),
    &quot;✅ Terminée&quot;,
    IF(
        ISPICKVAL(Statut__c , &quot;En cours&quot;),
        &quot;⏳ En cours&quot;,
        IF(
            ISPICKVAL(Statut__c , &quot;En retard&quot;),
            &quot;🚨 En retard&quot;,
            IF(
                ISPICKVAL(Statut__c , &quot;Suspendu&quot;),
                &quot; 🚫 Suspendu&quot;,
                IF(
                    ISPICKVAL(Statut__c , &quot;En attente&quot;),
                    &quot;⏸️ En attente&quot;,
                    &quot;&quot;
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>🚦 Statut</label>
    <type>Text</type>
</CustomField>