force-app/main/default/objects/Tache__c/fields/Annee_de_activite__c.field-meta.xml
<CustomField>
    <fullName>Annee_de_activite__c</fullName>
    <label>Année de création</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>