force-app/main/default/objects/Tache__c/fields/Blocage__c.field-meta.xml
<CustomField>
    <fullName>Blocage__c</fullName>
    <description>Expliquer le blocage que vous avez eu par rapport à. cette tâche qui met son statut en attente</description>
    <inlineHelpText>Difficulté liéé à la tâche</inlineHelpText>
    <label>Blocage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>