force-app/main/default/objects/Tache__c/fields/certification__c.field-meta.xml
<CustomField>
    <fullName>certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>La certification en rappport avec cette activité</description>
    <inlineHelpText>La certification en rappport avec cette activité</inlineHelpText>
    <label>certification</label>
    <referenceTo>formation__c</referenceTo>
    <relationshipName>Activit_s</relationshipName>
    <type>Lookup</type>
</CustomField>