force-app/main/default/objects/Tache__c/fields/Color_Variant__c.field-meta.xml
<CustomField>
    <fullName>Color_Variant__c</fullName>
    <formula>IF(ISPICKVAL(Statut__c, &quot;Terminé&quot;), &quot;#2ECC71&quot;,
  IF(ISPICKVAL(Statut__c, &quot;En cours&quot;), &quot;#3498DB&quot;,
    IF(ISPICKVAL(Statut__c, &quot;En retard&quot;), &quot;#F1C40F&quot;,
      IF(ISPICKVAL(Statut__c, &quot;En attente&quot;), &quot;#E74C3C&quot;, &quot;#000000&quot;)
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Variant</label>
    <type>Text</type>
</CustomField>