force-app/main/default/objects/Tache__c/fields/current_Date_time__c.field-meta.xml
<CustomField>
    <fullName>current_Date_time__c</fullName>
    <description>Current date time</description>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current date time</inlineHelpText>
    <label>current Date time</label>
    <type>DateTime</type>
</CustomField>