force-app/main/default/objects/Tache__c/fields/Date_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin__c</fullName>
    <description>Date de fin de la tâche</description>
    <inlineHelpText>Date de fin de la tâche</inlineHelpText>
    <label>🏁 Date de fin</label>
    <type>DateTime</type>
</CustomField>