force-app/main/default/objects/Tache__c/fields/Decalage__c.field-meta.xml
<CustomField>
    <fullName>Decalage__c</fullName>
    <label>Décalage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>