force-app/main/default/objects/Tache__c/fields/Delai__c.field-meta.xml
<CustomField>
    <fullName>Delai__c</fullName>
    <formula>/* 1. Jours ouvrés complets * 8h (déjà sans pause) */
(
  (5 * ( FLOOR( ( DATEVALUE(Date_de_fin__c) - DATE( 1900, 1, 8) ) / 7 ) ) + 
  MIN( 5, MOD( DATEVALUE(Date_de_fin__c) - DATE( 1900, 1, 8), 7 ) ) ) 
  - 
  (5 * ( FLOOR( ( DATEVALUE(Date_debut__c) - DATE( 1900, 1, 8) ) / 7 ) ) + 
  MIN( 5, MOD( DATEVALUE(Date_debut__c) - DATE( 1900, 1, 8), 7 ) ) )
) * 8

+

/* 2. Calcul du temps de travail sur la journée (Fin - Début) */
(
  ( HOUR(TIMEVALUE(Date_de_fin__c)) + MINUTE(TIMEVALUE(Date_de_fin__c))/60 ) 
  - 
  ( HOUR(TIMEVALUE(Date_debut__c)) + MINUTE(TIMEVALUE(Date_debut__c))/60 )
)

-

/* 3. Déduction de la pause (1h) SI le travail commence avant 13h ET finit après 14h */
IF(
  AND(
    HOUR(TIMEVALUE(Date_debut__c)) &lt;= 13, 
    HOUR(TIMEVALUE(Date_de_fin__c)) &gt;= 14
  ), 
  1, 0
)

-

/* 3. Déduction automatique de la pause (1h) par jour ouvré */
/* Si la tâche dure plusieurs jours, on multiplie la pause par le nombre de jours */
(
  (5 * ( FLOOR( ( DATEVALUE(Date_de_fin__c) - DATE( 1900, 1, 8) ) / 7 ) ) +
  MIN( 5, MOD( DATEVALUE(Date_de_fin__c) - DATE( 1900, 1, 8), 7 ) ) )
  -
  (5 * ( FLOOR( ( DATEVALUE(Date_debut__c) - DATE( 1900, 1, 8) ) / 7 ) ) +
  MIN( 5, MOD( DATEVALUE(Date_debut__c) - DATE( 1900, 1, 8), 7 ) ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>