force-app/main/default/objects/Tache__c/fields/Detail_de_la_tache__c.field-meta.xml
<CustomField>
    <fullName>Detail_de_la_tache__c</fullName>
    <label>Détail de la tâche</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>