force-app/main/default/objects/Tache__c/fields/end_date_projet__c.field-meta.xml
<CustomField>
    <fullName>end_date_projet__c</fullName>
    <description>Date de fin du projet</description>
    <inlineHelpText>Date de fin du projet</inlineHelpText>
    <label>Fin du projet</label>
    <type>Date</type>
</CustomField>