force-app/main/default/objects/Tache__c/fields/IMGtest__c.field-meta.xml
<CustomField>
    <fullName>IMGtest__c</fullName>
    <formula>IMAGE(&apos;https://cunning-wolf-wpu9a9-dev-ed--c.trailblaze.vf.force.com/resource/1773144915000/ImageProject?&apos;,&apos;Projext&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMGtest</label>
    <type>Text</type>
</CustomField>