force-app/main/default/objects/Tache__c/fields/jours_de_decalage__c.field-meta.xml
<CustomField>
    <fullName>jours_de_decalage__c</fullName>
    <description>Jours de  retard de la. tâche</description>
    <formula>IF(
    ISPICKVAL(Statut__c, &quot;Terminé&quot;), 
    /* Option 1: Laisser vide une fois terminé */
    NULL, 
    IF(
        ISBLANK(Date_de_fin__c),
        NULL,
        /* Calcul : Date de fin moins aujourd&apos;hui */
        /* Si Date de fin est passée, le résultat sera négatif*/
        ROUND(Date_de_fin__c - NOW(), 0)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Jours de  retard de la. tâche</inlineHelpText>
    <label>⏳ Décalage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>