force-app/main/default/objects/Tache__c/fields/Jours_de_retard__c.field-meta.xml
<CustomField>
    <fullName>Jours_de_retard__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Jours de retard de la tâche</description>
    <inlineHelpText>Jours de retard de la tâche</inlineHelpText>
    <label>Jours de retard to delete</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>