force-app/main/default/objects/Tache__c/fields/jours_restant_avant_la_fin__c.field-meta.xml
<CustomField>
    <fullName>jours_restant_avant_la_fin__c</fullName>
    <description>Jours restant avant la fin</description>
    <formula>IF(
  OR(ISBLANK(Date_debut__c), ISBLANK(Date_de_fin__c)),
  &quot;⚪ Dates non définies&quot;,
  IF(
    TODAY() &lt; DATEVALUE(Date_debut__c),
    &quot;📅 Tâche en attente (démarre dans &quot; &amp; TEXT(DATEVALUE(Date_debut__c) - TODAY()) &amp; &quot; jours)&quot;,
    IF(
      (DATEVALUE(Date_de_fin__c) - TODAY()) &lt; 0,
      &quot;🚨  échéance dépassée (&quot; &amp; TEXT(ABS(DATEVALUE(Date_de_fin__c) - TODAY())) &amp; &quot; jours de retard)&quot;,
      IF(
        (DATEVALUE(Date_de_fin__c) - TODAY()) = 0,
        &quot;🚨 𝐃ernier jour !&quot;,
        &quot;⏳ 𝐉 — &quot; &amp; 
        SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(
        TEXT(DATEVALUE(Date_de_fin__c) - TODAY()), 
        &quot;0&quot;, &quot;𝟎&quot;), &quot;1&quot;, &quot;𝟏&quot;), &quot;2&quot;, &quot;𝟐&quot;), &quot;3&quot;, &quot;𝟑&quot;), &quot;4&quot;, &quot;𝟒&quot;), &quot;5&quot;, &quot;𝟓&quot;), &quot;6&quot;, &quot;𝟔&quot;), &quot;7&quot;, &quot;𝟕&quot;), &quot;8&quot;, &quot;𝟖&quot;), &quot;9&quot;, &quot;𝟗&quot;) 
        &amp; &quot; 𝐚𝐯𝐚𝐧𝐭 𝐥𝐚 𝐟𝐢𝐧&quot;
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Jours restant avant la fin</inlineHelpText>
    <label>🕒 jours restant avant la fin</label>
    <type>Text</type>
</CustomField>