force-app/main/default/objects/Tache__c/fields/Mois__c.field-meta.xml
<CustomField>
    <fullName>Mois__c</fullName>
    <formula>CASE( MONTH( DATEVALUE(Date_debut__c) ),
  1,  &quot;01 - Janvier&quot;,
  2,  &quot;02 - Février&quot;,
  3,  &quot;03 - Mars&quot;,
  4,  &quot;04 - Avril&quot;,
  5,  &quot;05 - Mai&quot;,
  6,  &quot;06 - Juin&quot;,
  7,  &quot;07 - Juillet&quot;,
  8,  &quot;08 - Août&quot;,
  9,  &quot;09 - Septembre&quot;,
  10, &quot;10 - Octobre&quot;,
  11, &quot;11 - Novembre&quot;,
  12, &quot;12 - Décembre&quot;,
  &quot;Aucune date&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mois</label>
    <type>Text</type>
</CustomField>