force-app/main/default/objects/Tache__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <description>Montant total tâche</description>
    <formula>($User.Taux_horaire__c   *   Total_Heures__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Montant total tâche</inlineHelpText>
    <label>💵 Montant (Taux X heures totales )</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>