force-app/main/default/objects/Tache__c/fields/Montant_tache__c.field-meta.xml
<CustomField>
    <fullName>Montant_tache__c</fullName>
    <label>Montant total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>