force-app/main/default/objects/Tache__c/fields/Priorite__c.field-meta.xml
<CustomField>
    <fullName>Priorite__c</fullName>
    <label>🚩 Priorité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basse</fullName>
            </value>
            <value>
                <fullName>Moyenne</fullName>
            </value>
            <value>
                <fullName>Haute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>