force-app/main/default/objects/Tache__c/fields/progression__c.field-meta.xml
<CustomField>
    <fullName>progression__c</fullName>
    <description>Progression de la tâche</description>
    <formula>IF(OR(ISBLANK(Taux__c), Taux__c &lt;= 0), &quot;⚪⚪⚪⚪⚪⚪⚪⚪⚪⚪ 0%&quot;,
    (IF(Taux__c &gt;= 0.1, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF(Taux__c &gt;= 0.2, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF(Taux__c &gt;= 0.3, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF(Taux__c &gt;= 0.4, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF(Taux__c &gt;= 0.5, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF(Taux__c &gt;= 0.6, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF(Taux__c &gt;= 0.7, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF(Taux__c &gt;= 0.8, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF(Taux__c &gt;= 0.9, &quot;🟢&quot;, &quot;⚪&quot;) &amp;
    IF(Taux__c &gt;= 1.0, &quot;🟢&quot;, &quot;⚪&quot;)) 
    &amp; &quot; &quot; &amp; TEXT(Taux__c * 100) &amp; &quot;%&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Progression de la tâche</inlineHelpText>
    <label>⏳ Taux de traitement</label>
    <type>Text</type>
</CustomField>