force-app/main/default/objects/Tache__c/fields/Projet__c.field-meta.xml
<CustomField>
    <fullName>Projet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Le projet lié à la tâche</description>
    <inlineHelpText>Le projet lié à la tâche</inlineHelpText>
    <label>🗒️ Projet associé</label>
    <referenceTo>Projet__c</referenceTo>
    <relationshipName>Taches</relationshipName>
    <type>Lookup</type>
</CustomField>