force-app/main/default/objects/Tache__c/fields/start_date_projet__c.field-meta.xml
<CustomField>
    <fullName>start_date_projet__c</fullName>
    <description>Date de début du projet</description>
    <inlineHelpText>Date de début du projet</inlineHelpText>
    <label>Début du projet</label>
    <type>Date</type>
</CustomField>