force-app/main/default/objects/Tache__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <defaultValue>&quot;En attente&quot;</defaultValue>
    <description>Statut de la tâche</description>
    <inlineHelpText>Statut de la tâche</inlineHelpText>
    <label>🚦Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Suspendu</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>En retard</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>