force-app/main/default/objects/Tache__c/fields/StatutTest__c.field-meta.xml
<CustomField>
    <fullName>StatutTest__c</fullName>
    <label>Statut test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Cours</fullName>
            </value>
            <value>
                <fullName>Suspendu</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>En retard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>