force-app/main/default/objects/Tache__c/fields/Tache_Parent__c.field-meta.xml
<CustomField>
    <fullName>Tache_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tâche Parent</label>
    <referenceTo>Tache__c</referenceTo>
    <relationshipLabel>Tâches</relationshipLabel>
    <relationshipName>Tache_Parents</relationshipName>
    <type>Lookup</type>
</CustomField>