force-app/main/default/objects/Tache__c/fields/Taux__c.field-meta.xml
<CustomField>
    <fullName>Taux__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Taux  de la tâche</description>
    <inlineHelpText>Progression de la tâche</inlineHelpText>
    <label>⏳  % Evolution</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>