force-app/main/default/objects/Tache__c/fields/Total_Heures__c.field-meta.xml
<CustomField>
    <fullName>Total_Heures__c</fullName>
    <label>⏰ Total Heures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>