force-app/main/default/objects/Tache__c/fields/Type_de_tache__c.field-meta.xml
<CustomField>
    <fullName>Type_de_tache__c</fullName>
    <description>Le type de tâche affectée à l&apos;employé</description>
    <inlineHelpText>Le type de tâche affectée à l&apos;employé</inlineHelpText>
    <label>📂 Type de tâche</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apprentissage</fullName>
                <default>true</default>
                <label>Apprentissage</label>
            </value>
            <value>
                <fullName>Correction de bug</fullName>
            </value>
            <value>
                <fullName>Perfectionnement</fullName>
            </value>
            <value>
                <fullName>Propection</fullName>
            </value>
            <value>
                <fullName>Tâche ponctuelle</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Analyse</fullName>
            </value>
            <value>
                <fullName>Technique</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Sécurité</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Formation</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>