force-app/main/default/objects/Tache__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>👤 Affectée à</label>
    <referenceTo>User</referenceTo>
    <relationshipName>T_ches</relationshipName>
    <type>Lookup</type>
</CustomField>