force-app/main/default/objects/Tache__c/fields/UserAffected__c.field-meta.xml
<CustomField>
    <fullName>UserAffected__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>L&apos;utilisateur lié à cette tâche</description>
    <inlineHelpText>L&apos;utilisateur lié à cette tâche</inlineHelpText>
    <label>👤 Affectée à la tâche</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Taches</relationshipName>
    <type>Lookup</type>
</CustomField>