force-app/main/default/objects/Tache__c/validationRules/check_dates_task.validationRule-meta.xml
<ValidationRule>
    <fullName>check_dates_task</fullName>
    <active>true</active>
    <description>La date de début  de la tâche doit être supérieure ou égale à la date début projet</description>
    <errorConditionFormula>OR(
  /* Début tâche AVANT début projet */
  DATEVALUE(Date_debut__c) &lt; Projet__r.startDate__c,
  
  /* Début tâche APRÈS fin projet */
  DATEVALUE(Date_debut__c) &gt; Projet__r.endDate__c,
  
  /* Fin tâche APRÈS fin projet */
  DATEVALUE(Date_de_fin__c) &gt; Projet__r.endDate__c,
  
  /* Fin tâche AVANT début projet */
  DATEVALUE(Date_de_fin__c) &lt; Projet__r.startDate__c
)</errorConditionFormula>
    <errorMessage>les dates de fin et de début de la tâche sont  en déhors des plages des dates du projet</errorMessage>
</ValidationRule>