force-app/main/default/objects/Tache__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Projet__c</columns>
    <columns>NAME</columns>
    <columns>Alerte_Visuelle__c</columns>
    <columns>Date_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>jours_de_decalage__c</columns>
    <columns>Taux__c</columns>
    <columns>progression__c</columns>
    <columns>User__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>📚 Toutes les tâches</label>
</ListView>