force-app/main/default/objects/Tache__c/listViews/Tache_Obsolete.listView-meta.xml
<ListView>
    <fullName>Tache_Obsolete</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Projet__c</columns>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>Date_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>jours_de_decalage__c</columns>
    <columns>Taux__c</columns>
    <columns>progression__c</columns>
    <columns>User__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Obsolete</value>
    </filters>
    <label>📁 Tâches Archivées</label>
</ListView>